2012-12-17  Niibe Yutaka  <gniibe@fsij.org>

	* boards/FST_01_00: Added.

2012-10-30  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.04.

	* src/main.c (vcom_string3): Updated.

2012-10-26  Niibe Yutaka  <gniibe@fsij.org>

	* NEUG_USB_DEVICE_ID (Product_STRING): Rename to NeuG True RNG.

2012-10-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (neug_consume_random): New.

	* src/main.c (copy_to_tx): New.
	(main): Call neug_consume_random.

2012-10-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Wait for random number generation (instead of
	sleeping).

2012-10-16  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (neug_get_nonblock): New function.

	* src/main.c (RANDOM_BYTES_LENGTH): Now, it's 64 to fill Tx
	buffer.
	(main): Fill 64-byte Tx buffer if possible.

2012-10-15  Niibe Yutaka  <gniibe@fsij.org>

	* tool/neug_check.py (main): Display USB strings.

2012-10-13  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE_MINI/board.c [!DFU_SUPPORT] (boardInit): Don't run
	when "user switch" is pushed.  This is for JTAG/SWD debugger.

2012-10-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (neug_setup): Support neug_*_max.

	* src/random.c (ep_process): Enable health tests for
	NEUG_MODE_RAW.
	(rng): Don't use the result on error for NEUG_MODE_RAW.
	(neug_rc_max, neug_p64_max, neug_p4k_max): New.
	(repetition_count_test, adaptive_proportion_64_test)
	(adaptive_proportion_4096_test): Record maximum counts.
	(noise_source_cnt_max_reset): New.
	(neug_mode_select): Call noise_source_cnt_max_reset on mode
	change.

	* tool/neug_check.py (get_info): Rename.
	(main): Support max counts.

2012-10-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (EP_ROUND_RAW_DATA_INPUTS): Set it to 32.

	* tool/dfuse.py: Update from Gnuk 1.0.1.

	* src/chconf.h (CORTEX_VTOR_INIT): Define.

	* src/neug.ld.in (.sys): Follow the change of file layout.

	* src/halconf.h (HAL_USE_EXT, HAL_USE_RTC): Define.
	(ADC_USE_WAIT, ADC_USE_MUTUAL_EXCLUSION, SERIAL_BUFFERS_SIZE):
	Remove.
